--- a/style.css
+++ b/style.css
@@ -9,186 +9,170 @@
 
 
 /* basic elements */
+
 html {
-	margin: 0;
-	padding: 0;
-	}
-body { 
-	font: 75% georgia, sans-serif;
-	line-height: 1.88889;
-	color: #555753; 
-	background: #fff url(blossoms.jpg) no-repeat bottom right; 
-	margin: 0; 
-	padding: 0;
-	}
-p { 
-	margin-top: 0; 
-	text-align: justify;
-	}
-h3 { 
-	font: italic normal 1.4em georgia, sans-serif;
-	letter-spacing: 1px; 
-	margin-bottom: 0; 
-	color: #7D775C;
-	}
-a:link { 
-	font-weight: bold; 
-	text-decoration: none; 
-	color: #B7A5DF;
-	}
-a:visited { 
-	font-weight: bold; 
-	text-decoration: none; 
-	color: #D4CDDC;
-	}
-a:hover, a:focus, a:active { 
-	text-decoration: underline; 
-	color: #9685BA;
-	}
-abbr {
-	border-bottom: none;
-	}
-
-
-/* specific divs */
-.page-wrapper { 
-	background: url(zen-bg.jpg) no-repeat top left; 
-	padding: 0 175px 0 110px;  
-	margin: 0; 
-	position: relative;
-	}
-
-.intro { 
-	min-width: 470px;
-	width: 100%;
-	}
-
-header h1 { 
-	background: transparent url(h1.gif) no-repeat top left;
-	margin-top: 10px;
-	display: block;
-	width: 219px;
-	height: 87px;
-	float: left;
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-header h2 { 
-	background: transparent url(h2.gif) no-repeat top left; 
-	margin-top: 58px; 
-	margin-bottom: 40px; 
-	width: 200px; 
-	height: 18px; 
-	float: right;
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
+  background-color: white;
+}
 header {
-	padding-top: 20px;
-	height: 87px;
+  background-image: url("DSC_2147.JPG");
+  background-size: cover;
+  background-position: center bottom;
+  border-radius: 15px;
+  padding: 100px;
+  color: white;
+  text-align: center;
+}
+/*Intro*/
+.summary {
+  /*background-color: lightcyan;*/
+  float: left;
+  /*width: 45%;*/
+  clear: right;
+  padding: 25px;
+  text-align: center;
+  /*margin: 0 auto;-- didn't center element like I'd hoped*/
 }
 
-.summary {
-	clear: both; 
-	margin: 20px 20px 20px 10px; 
-	width: 160px; 
-	float: left;
-	}
 .summary p {
-	font: italic 1.1em/2.2 georgia; 
-	text-align: center;
-	}
+  background-color: black;
+  color: white;
+  line-height: 1.5em;
+  transform: rotate(-3deg);
+  padding-right: 100px;
+  padding-left: 100px;
+}
 
+.summary a {
+  color: lightgreen;
+}
+
+/*Road to Enlightenment*/
 .preamble {
-	clear: right; 
-	padding: 0px 10px 0 10px;
-	}
-.supporting {	
-	padding-left: 10px; 
-	margin-bottom: 40px;
-	}
+  background-color: blanchedalmond;
+  float: left;
+  width: 45%;
+  clear: right;
+  padding: 25px;
+  text-align: center;
+  margin: 10px 50px;
+  border: 5px dotted;
+  border-radius: 10%;
+}
 
-footer { 
-	text-align: center; 
-	}
-footer a:link, footer a:visited { 
-	margin-right: 20px; 
-	}
+/*So What is This About?*/
+.explanation {
+  background-color: blanchedalmond;
+  float: right;
+  width: 45%;
+  clear: left;
+  padding: 25px;
+  text-align: center;
+  margin: 10px 50px;
+  border: 5px dotted;
+  border-radius: 10%;
+}
 
-.sidebar {
-	margin-left: 600px; 
-	position: absolute; 
-	top: 0; 
-	right: 0;
-	}
-.sidebar .wrapper { 
-	font: 10px verdana, sans-serif; 
-	background: transparent url(paper-bg.jpg) top left repeat-y; 
-	padding: 10px; 
-	margin-top: 150px; 
-	width: 130px; 
-	}
-.sidebar h3.select { 
-	background: transparent url(h3.gif) no-repeat top left; 
-	margin: 10px 0 5px 0; 
-	width: 97px; 
-	height: 16px; 
+/*Participation*/
+.participation {
+  background-color: blanchedalmond;
+  float: left;
+  width: 45%;
+  clear: right;
+  padding: 25px;
+  text-align: center;
+  margin: 10px 50px;
+  border: 5px dotted;
+  border-radius: 10%;
+}
 
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-.sidebar h3.archives { 
-	background: transparent url(h5.gif) no-repeat top left; 
-	margin: 25px 0 5px 0; 
-	width:57px; 
-	height: 14px; 
+/*Benefits*/
+.benefits {
+  background-color: blanchedalmond;
+  float: right;
+  width: 45%;
+  clear: left;
+  padding: 25px;
+  text-align: center;
+  margin: 10px 50px;
+  border: 5px dotted;
+  border-radius: 10%;
+}
 
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-.sidebar h3.resources { 
-	background: transparent url(h6.gif) no-repeat top left; 
-	margin: 25px 0 5px 0; 
-	width:63px; 
-	height: 10px; 
+/*Requirements*/
+.requirements {
+  background-color: blanchedalmond;
+  float: left;
+  width: 45%;
+  clear: right;
+  padding: 25px;
+  text-align: center;
+  margin: 10px 50px;
+  border: 5px dotted;
+  border-radius: 10%;
+}
+/*Is supposed to make my footer stay at the bottom w/o being fixed but is not working for some reason*/
+footer {
+  /*background-color: lightblue;*/
+  /*position: absolute;-- changed to fixed so it wouldn't float in the middle of page*/
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  position: fixed;
+}
 
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-
-
-.sidebar ul {
-	margin: 0;
-	padding: 0;
-	}
-.sidebar li {
-	line-height: 1.3em; 
-	background: transparent url(cr1.gif) no-repeat top center; 
-	display: block; 
-	padding-top: 5px; 
-	margin-bottom: 5px;
-	list-style-type: none;
-	}
-.sidebar li a:link {
-	color: #988F5E;
-	}
-.sidebar li a:visited {
-	color: #B3AE94;
-	}
+footer a {
+  padding: 5px 25px;
+  background-color: black;
+  color: lightgreen;
+  
+}
 
 
-.extra1 {
-	background: transparent url(cr2.gif) top left no-repeat; 
-	position: absolute; 
-	top: 40px; 
-	right: 0; 
-	width: 148px; 
-	height: 110px;
-	}
+/*Aside of Design Selections*/
+.design-selection {
+  background-color: lightgreen;
+  float: left;
+  width: 100%;
+  padding: 20px 0px 20px 0px;
+  text-align: center;
+}
+
+.design-selection ul li {
+  list-style-type: none;
+  line-height: 2em;
+}
+
+.design-selection a {
+  color: white;
+}
+
+/*Aside of View All Designs*/
+.design-archives {
+  background-color: yellow;
+  /*clear: both;*/
+  text-align: center;
+  width: 20%;
+  height: 650px;
+}
+
+/*.design-archives ul li {
+  list-style-type: none;
+}*/
+
+/*Aside of Resources*/
+.zen-resources {
+  background-color: sandybrown;
+  /*float: right; -- was going to float but couldn't get it the way I wanted*/
+  padding: 1200px 30px 30px 30px;
+  margin-left: 70%;
+  margin-top: -300px;
+}
+
+a {
+  color: red;
+}
+
+a:hover {
+  color: yellow;
+}
